--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: realtypro-realestate
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput
+    buildCommand: pip install -r requirements.txt && python manage.py migrate && python manage.py collectstatic --noinput
     startCommand: gunicorn realestate_project.wsgi:application
     envVars:
       - key: PYTHON_VERSION
